Phoenix/theme.css
/*
Phoenix Theme for Obsidian by RyzenFromFire
Adapted from the gruvbox and Atom themes.
*/


:root
{
    /* Custom Config */

    /* Maximum Height (px) for note embeds (probably applies to other embeds too) */
    --max-embed-height: 1000px; /* Obsidian Default is 600px */

    /* Gruvbox Colors */
    --dark0-hard:     #1d2021;
    --dark0:          #282828;
    --dark0-soft:     #32302f;
    --dark1:          #3c3836;
    --dark2:          #504945;
    --dark3:          #665c54;
    --dark4:          #7c6f64;

    --gray:           #928374;

    --light0-hard:    #f9f5d7;
    --light0:         #fbf1c7;
    --light0-soft:    #f2e5bc;
    --light1:         #ebdbb2;
    --light2:         #d5c4a1;
    --light3:         #bdae93;
    --light4:         #a89984;

    --bright-red:     #fb4934;
    --bright-orange-v:#fe8019;
    --bright-yellow:  #fabd2f;

    --neutral-red:    #cc241d;
    --neutral-orange: #d65d0e;
    --neutral-yellow: #d79921;

    --faded-red:      #9d0006;
    --faded-orange:   #af3a03;
    --faded-yellow:   #b57614;

    /* My Custom Colors */
    --platinum:       #cccccc;
    --r-dark0-accent: #1e1e1e;
    --r-gray:         #9d8f82;
    --r-gray2:        #a89c90;
    --r-gray3:        #b3ab9e;
    --r-light0:       #e7cfb8;
    --r-light2:       #d0baa6;
    --r-light2-soft:  #c4b09c;
    --r-light3:       #b9a693;

    /* Background Colors */
    --r-dark0:        #212121;
    --r-dark1:        #191717;
    --r-dark2:        #161414;

    --standard-text:  #eadad9;
    --dark-red:       #bc0104;
    --red-orange:     #c52d0a;
    --red-orange2:    #cd2b11;
    --deep-orange:    #ed5b0f;
    --bright-orange:  #fe750e;
    --yellow-orange:  #fe9109;
    --dark-orange:    #d5520e;
    --meteor:         #72504b;
    --gunmetal:       #534f4e;
    --scorpion:       #625e5e; /* "scorpion" grey according to some color picker site */
    --code-orange:    #b46629; /* this is the same color IntelliJ uses to color keywords in Java */
    --test-green:     #00ff00; /* for testing purposes */
}

/*
______  ___  ______ _   __
|  _  \/ _ \ | ___ \ | / /
| | | / /_\ \| |_/ / |/ / 
| | | |  _  ||    /|    \ 
| |/ /| | | || |\ \| |\  \
|___/ \_| |_/\_| \_\_| \_/                 

*/
.theme-dark
{
    --background-primary:         var(--r-dark0);
    --background-primary-alt:     var(--dark0);
    --background-secondary:       var(--r-dark1);
    --background-secondary-alt:   var(--r-dark2);
    --text-normal:                var(--standard-text);
    --text-faint:                 var(--scorpion);
    --text-platinum:              var(--platinum);
    --text-title-h1:              var(--dark-red);
    --text-title-h2:              var(--red-orange);
    --text-title-h3:              var(--deep-orange);
    --text-title-h4:              var(--bright-orange);
    --text-title-h5:              var(--yellow-orange);
    --text-title-h6:              var(--meteor);
    --text-link:                  var(--dark-orange);
    --text-link-hover:            var(--deep-orange);
    --text-a:                     var(--bright-orange); /* also controls color of sidebar icons when hovered */
    --text-a-hover:               var(--yellow-orange);
    --text-mark:                  rgba(215, 153, 33, 0.4); /* neutral-yellow */
    --pre-code:                   var(--default-codeblock);
    --text-highlight-bg:          rgba(254, 145, 9, 0.5); /* yellow-orange */
    --interactive-accent:         var(--deep-orange);
    --interactive-before:         var(--dark4);
    --background-modifier-border: var(--gunmetal); /* very thin border around edge, and also file structure hierarchy */
    --text-accent:                var(--bright-orange);
    --text-accent-hover:          var(--yellow-orange);
    --interactive-accent-rgb:     var(--bright-orange);
    --inline-code:                var(--code-orange); /* text in inline code, edit and preview */
    --code-block:                 var(--code-orange); /* text in preview mode from codeblock */
    --vim-cursor:                 var(--bright-orange);
    --text-selection:             rgba(213, 82, 14, 0.25);
    --text-tag:                   var(--faded-orange);
    --text-card:                  var(--r-light2-soft);
    --default-codeblock: #1a1a1a; /* Obsidian default codeblock color */
}
/* ... */

